WebCore/bindings/js/JSNodeCustom.cpp
@@ -110,7 +110,7 @@ JSValue JSNode::appendChild(ExecState* exec, const ArgList& args)
 
 JSValue JSNode::addEventListener(ExecState* exec, const ArgList& args)
 {
-    JSDOMGlobalObject* globalObject = toJSDOMGlobalObject(impl()->scriptExecutionContext());
+    JSDOMGlobalObject* globalObject = toJSDOMGlobalObject(impl()->document());
     if (!globalObject)
         return jsUndefined();
 
@@ -122,7 +122,7 @@ JSValue JSNode::addEventListener(ExecState* exec, const ArgList& args)
 
 JSValue JSNode::removeEventListener(ExecState* exec, const ArgList& args)
 {
-    JSDOMGlobalObject* globalObject = toJSDOMGlobalObject(impl()->scriptExecutionContext());
+    JSDOMGlobalObject* globalObject = toJSDOMGlobalObject(impl()->document());
     if (!globalObject)
         return jsUndefined();
 
